# global-ai-bootcamp-2025-workshop-ai-agents

./: README.md  hello.py  pyproject.toml
.github/workflows/: azure-static-web-apps-red-meadow-0f2d4e810.yml
docs/: mkdocs.yml
docs/docs/: Introduction.md  index.md  introduction.md  lab-1-function_calling.md  lab-2-code_interpreter.md  lab-3-file_search.md  lab-4-bing_search.md  setup.md  summary.md
infra/: deploy.sh
src/workshop/: .env.sample  README.md  main.py  requirements.txt  sales_data.py  stream_event_handler.py  utilities.py
src/workshop/instructions/: instructions_file_search.txt  instructions_function_calling.txt
